--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <title>Prize Wheel Spin Game</title>
         <link rel="stylesheet" href="main.css" type="text/css" />
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-        <script type="text/javascript" src="../../Winwheel.js"></script>
+        <script type="text/javascript" src="Winwheel.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
         <style>
             :root {
